--- a/exercicios-python/algebra linear/ex3.ipynb
+++ b/exercicios-python/algebra linear/ex3.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
     "    texto = texto.lower() # deixando toda a string com letras minúsculas\n",
     "    \n",
     "    # caso o texto tenha uma quantidade ímpar de letras, adiciona mais uma letra arbitrária ao final\n",
-    "    if(len(texto) % 2 != 0):\n",
+    "    if len(texto) % 2 != 0:\n",
     "        texto += \"g\" # adiciona-se g, por exemplo\n",
     "    \n",
     "    print(\"o texto é: {}\".format(texto)) # imprime o texto informado na tela\n",
@@ -293,21 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Informe um texto sem acentos:  ProfessorEdmarEnsinaMuitoBemAlgebraLinear\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "o texto é: professoredmarensinamuitobemalgebralinearg\n"
+      "o texto é: professorfelipeensinamuitobemalgebralinear\n"
      ]
     }
    ],
@@ -327,16 +320,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'fhgviocepytuidezsmxeikizijywylmcnfylyhembe'"
+       "'fhgviocevbstkncybgyheocqhgnsscxskprmjyvqid'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "19 = 3 (mod 2)"
+    "19 = 1 (mod 2)"
    ]
   },
   {
@@ -567,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -581,14 +574,22 @@
    ],
    "source": [
     "# imprime a matriz A\n",
-    "print(\"{}\".format(A)) "
+    "print(f\"{A}\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# definindo a matriz A\n",
     "A = numpy.array([[5,6],[2,3]]) \n",
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +614,7 @@
    ],
    "source": [
     "# imprime o residuo \n",
-    "print(\"{}\".format(residuo)) "
+    "print(f\"{residuo}\") "
    ]
   },
   {
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,18 +649,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1 24]\n",
-      " [ 8 19]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imprimindo a matriz descriptograda\n",
     "print(\"{}\".format(descriptografia)) "
@@ -674,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,20 +676,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'professoredmarensinamuitobemalgebralinearg'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# chamando a função responsável por criptografar/descriptografar\n",
     "cifraHill(cifra,descriptografia) "
@@ -756,7 +737,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -770,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
